--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<br>
 		<br>
 	<div class="container-fluid2">
-		<div style="text-align: center;">
+		<div class="center">
 			<h2>Portfolio</h2>
 			<p>These are some of my projects since starting on my coding journey.</p>
 		</div>
